--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -11,8 +11,8 @@
 
 		<!-- slider #1 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_civil_engineering.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Civil Engineering</h1>
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="civil_engineering_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -47,7 +47,7 @@
 		<!-- slider #2 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_landscape_architecture.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="landscape_architecture_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -82,7 +82,7 @@
 		<!-- slider #3 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_planning.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Planning</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="planning_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -117,7 +117,7 @@
 		<!-- slider #4 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_surveying.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Surveying</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="surveying_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -152,7 +152,7 @@
 		<!-- slider #5 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_gis.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">GIS</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="gis_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -187,7 +187,7 @@
 		<!-- slider #6 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_aerial_mapping.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="projects_aerial_mapping.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
