--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -46,7 +46,7 @@
 
 		<!-- slider #2 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_landscape_architecture.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
 			<div class="lw-auto-slider-container">
@@ -81,7 +81,7 @@
 
 		<!-- slider #3 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_planning.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
 			<div class="lw-auto-slider-container">
@@ -116,7 +116,7 @@
 
 		<!-- slider #4 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_surveying.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
 			<div class="lw-auto-slider-container">
@@ -151,7 +151,7 @@
 
 		<!-- slider #5 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_gis.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
@@ -186,7 +186,7 @@
 
 		<!-- slider #6 -->
 		<div class="lw-auto-slider" style="position: relative;" ng-if="projects_aerial_mapping.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container">
