--- a/lib/client/app/stylesheets/index.css
+++ b/lib/client/app/stylesheets/index.css
@@ -4,6 +4,7 @@
 
 /* index-slider */
 .lw-auto-slider {height: 600px;}
+.lw-auto-slider.projects {height: 400px;}
 .lw-auto-slider-container {background-color: #F5F5F5; z-index: 2; padding-top: 112px; padding-bottom: 64px; position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
 .index-news-post {width: 33%; overflow: hidden; float: left; box-sizing: border-box;}
 .index-news-post md-card {overflow: hidden;}
@@ -16,6 +17,7 @@
 
 @media screen and (max-width:599px) {
 	.lw-auto-slider {height: 600px;}
+	.lw-auto-slider.projects {height: 600px;}
   	.index-news-post.full-width {width: 100%!important;}
 }
 
