--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -1,10 +1,3 @@
-<style>
-.interior-page-background {
-    background: url('{{projectPage.data.page.background.images.source}}') no-repeat;
-    background-size: cover; width: 100%!important; height: 100%; 
-    right: 0; top: 200px; padding:0; margin: 0!important;
-}
-</style>
 <md-content class="page project" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lighter.value}}">
 
@@ -24,7 +17,7 @@
 			
 			<md-card class="md-whiteframe-8dp" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" layout-align="start start" ng-attr-style="z-index: 1; min-height: 800px; background-color: {{base_hue_lightest.value}}; padding: 0; position: relative;">
 				<div flex="100" style="height: 400px; width: 100%; margin: 0; overflow: hidden; position: relative;">
-					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -75%; left: -16.5%;" ng-src="{{projectPage.data.page.background.images.source}}">
+					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -75%; left: -16.5%;" ng-src="{{projectPage.data.page.foreground.images.source}}">
 				</div>
 				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
 			        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
