--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -23,10 +23,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * civil_engineering_row.panel_width}}px; transform:translate({{civil_engineering_row.amount_to_slide}},0);" ng-swipe-left="civil_engineering_row.panel_swipe('left')" ng-swipe-right="civil_engineering_row.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in civil_engineering_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout-gt-sm="100" layout-wrap layout="column" layout-sm="column" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="column" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak ng-src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
@@ -58,10 +61,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * landscape_architecture_row.panel_width}}px; transform:translate({{landscape_architecture_row.amount_to_slide}},0);" ng-swipe-left="landscape_architecture_row.panel_swipe('left')" ng-swipe-right="landscape_architecture_row.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in landscape_architecture_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="row" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
@@ -93,10 +99,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * planning_row.panel_width}}px; transform:translate({{planning_row.amount_to_slide}},0);" ng-swipe-left="planning_row.panel_swipe('left')" ng-swipe-right="planning_row.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in planning_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="row" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
@@ -128,10 +137,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * surveying_row.panel_width}}px; transform:translate({{surveying_row.amount_to_slide}},0);" ng-swipe-left="surveying_row.panel_swipe('left')" ng-swipe-right="surveying_row.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in surveying_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="row" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
@@ -163,10 +175,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * gis_row.panel_width}}px; transform:translate({{gis_row.amount_to_slide}},0);" ng-swipe-left="gis_row.panel_swipe('left')" ng-swipe-right="gis_row.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in gis_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="row" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
@@ -198,10 +213,13 @@
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * projects_aerial_mapping.panel_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="projects_aerial_mapping.panel_swipe('left')" ng-swipe-right="projects_aerial_mapping.panel_swipe('right')">
 					<div layout-padding class="projects-listing" ng-repeat="item in projects_aerial_mapping.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="100" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+						<md-card class="md-whiteframe-6dp" layout="column" layout-sm="row" layout-gt-sm="row" layout-wrap layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="padding: 0;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -32px; right: 64px;">
+			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+		    				</md-button>
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
