--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -12,7 +12,7 @@
 		<!-- slider #1 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_civil_engineering.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Civil Engineering</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="civil_engineering_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -33,7 +33,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -50,7 +50,7 @@
 		<!-- slider #2 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_landscape_architecture.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="landscape_architecture_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -71,7 +71,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -88,7 +88,7 @@
 		<!-- slider #3 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_planning.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Planning</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="planning_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -109,7 +109,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -126,7 +126,7 @@
 		<!-- slider #4 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_surveying.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Surveying</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="surveying_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -147,7 +147,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -164,7 +164,7 @@
 		<!-- slider #5 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_gis.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">GIS</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="gis_row.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -185,7 +185,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -202,7 +202,7 @@
 		<!-- slider #6 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_aerial_mapping.length">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: left; z-index: 3;">
-				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 48px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
+				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; margin-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="projects_aerial_mapping.panel_swipe('right')" ng-disabled="news_post_swipe == false" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -223,7 +223,7 @@
 							<div flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
